# Open_agbot_devkit_ros

./: Dockerfile  README.md  agbot_diagnostic.py  docker-compose.yml  driver_params.yaml  find-space.py  fix.py  fixusb.py  flash-lizard.sh  global_params.yaml  host_override.yaml  login.sh  manage.py  notes.md  openagbot-dev1.py  openagbotquick.py  sim_lizard.sh
.github/: FUNDING.yml
docker/: Dockerfile  Dockerfile-28-1  Dockerfile-old  docker-compose.yml  docker-compose.yml-20-1
maps/: test_map.yaml
src/: agbot-diagnostic.py
src/basekit_driver/: setup.py
src/basekit_driver/basekit_driver/: basekit_driver_node.py  utils
src/basekit_driver/basekit_driver/communication/: serial_communication.py
src/basekit_driver/config/: basekit_driver.yaml
src/basekit_driver/scripts/: espresso.py
src/basekit_launch/: CMakeLists.txt
src/basekit_launch/config/: basekit.yaml  host_override.yaml  thinkpad_override.yaml  ublox.yaml  ublox_f9p.yaml
src/basekit_launch/launch/: agbot.launch.py  basekit_launch.py  gnss.launch.py  master.launch.py
src/basekit_ui/: package.xml  setup.cfg  setup.py
src/basekit_ui/basekit_ui/: basekit_ui_node.py  ui_node.py
src/topological_navigation/: .gitignore  AGENTS.md  README.md  REVIEW.md
src/topological_navigation/.github/: copilot-instructions.md
src/topological_navigation/.github/workflows/: ci.yaml  validate-schema.yaml
src/topological_navigation/topological_navigation/: README.md  package.xml  setup.py
src/topological_navigation/topological_navigation_msgs/: CMakeLists.txt
src/ublox/ublox_gps/config/: c94_m8p_rover.yaml  (+3 more)
(+26 files in other folders)
