<?xml version="1.0"?>
<package format="3">
  <name>basekit_ui</name>
  <version>0.0.0</version>
  <description>AgBot User Interface</description>
  <maintainer email="sam@todo.todo">sam</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
